@@ -1,3 +1,8 @@
+2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-graphwin.c: polished
+	* src/baobab-prefs.c: completed Gio Migration
+
 2008-05-01  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* data/baobab.schemas.in:
